syntax = "proto3";

import "./primitives/addresses.proto";

service StateStorage {
  rpc ReadKeys (ReadKeysInput) returns (ReadKeysOutput);
}

message ReadKeysInput {
  ContractAddress contractAddress = 1;
  repeated string keys = 2;
}

message ReadKeysOutput {
  map<string,string> values = 1;
}
